@@ -62,7 +62,8 @@ extern "C" {
 
 #define REGSIZE( _x_ ) (((_x_) < F0 || (_x_) >= FPS) ? 4 : 12)
 
-#define NUMREGBYTES ((16*4)+(8*12)+(2*4))
+// Comment out to allow for default gdb stub packet buffer which is larger.
+// #define NUMREGBYTES ((16*4)+(8*12)+(2*4))
 
 #ifndef TARGET_REGISTER_T_DEFINED
 #define TARGET_REGISTER_T_DEFINED
