@@ -1,3 +1,7 @@
+2002-07-15  Mark Salter  <msalter@redhat.com>
+
+	* src/net/net_io.c: Increase size of out_buf to 1024 bytes.
+
 2002-07-11  Gary Thomas  <gary@chez-thomas.org>
 
 	* src/io.c (mon_read_char_with_timeout): Ensure interrupts are
